Structure for webpage created with flexbox

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="container">
+    <div class="sidebar">
+
+    </div>
+
+    <main class="main">
+        <header class="header">
+
+        </header>
+    </main>
+
 </body>
 </html>
