Finalized Layout Dimensions

--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
-    <div class="sidebar">
+    <aside class="sidebar">
 
-    </div>
+    </aside>
 
     <main class="main">
         <header class="header">
 
         </header>
+
+        <section class="section">
+
+        </section>
     </main>
 
 </body>
