--- a/index.html
+++ b/index.html
@@ -80,7 +80,19 @@
             </div>
 
             <div class="header-bottom">
-                
+                <div class="greeting-section">
+                    <img class="greeting-img" src="assets/mach_1_ne.jpg" alt="">
+                    <div class="text-section">
+                        <div class="greeting">Hi there,</div>
+                        <div class="name-tag">Sabit Had<span>&imacr;</span>d Ariff (@mach_1_ne)</div>
+                    </div>
+                </div>
+
+                <div class="button-section">
+                    <div class="new-btn">New</div>
+                    <div class="upload-btn">Upload</div>
+                    <div class="share-btn">Share</div>
+                </div>
             </div>
         </header>
 
