Announcement and Trending Section complete

--- a/index.html
+++ b/index.html
@@ -97,7 +97,72 @@
         </header>
 
         <section class="section">
+            <div class="projects-section">
+                <div class="section-title"> Your Projects</div>
+                <div class="project-card">
 
+                </div>
+            </div>
+
+            <div class="announcements-and-trending-section">
+                <div class="announcements">
+                    <div class="section-title"> Announcements </div>
+                    <div class="announcements-container">
+                        <div class="announce">
+                            <div class="announce-heading"> Site Maintenance </div>
+                            <div class="announce-content">
+                                Vestibulum condimentum tellus lacus, in accumsan elit
+                                maximus ac. Donec hendrerit sondales congue...
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="announce">
+                            <div class="announce-heading"> Community Share Day </div>
+                            <div class="announce-content">
+                                Nam vel lectus tincidunt, rutrum nulla eu, ornare libero.
+                                Aliquam dicturm accumsan porttitor
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="announce">
+                            <div class="announce-heading"> Updated Privacy Policy </div>
+                            <div class="announce-content">
+                                Phasellus effictur nisi eget elit consectetur, eget
+                                condimentum ante auctor. Cras fringilla sgittis sem in mattis...
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="trending">
+                    <div class="section-title"> Trending </div>
+                    <div class="trending-container">
+
+                        <div class="trend">
+                            <img class="trending-img" src="assets/mach_1_ne.jpg" alt="">
+                            <div class="text-section">
+                                <div class="tag">@mach_1_ne</div>
+                                <div class="name">Sabit Had<span>&imacr;</span>d Ariff</div>
+                            </div>
+
+
+
+                            <div class="trend">
+                                <img class="trending-img" src="assets/mach_1_ne.jpg" alt="">
+                                <div class="text-section">
+                                    <div class="tag">@mach_1_ne</div>
+                                    <div class="name">Sabit Had<span>&imacr;</span>d Ariff</div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
